--- a/src/Notebooks/Asym_SPNI.ipynb
+++ b/src/Notebooks/Asym_SPNI.ipynb
@@ -41,7 +41,7 @@
     "from src.solvers.BendersDecomposition import BendersDecomposition\n",
     "\n",
     "from scripts.compare_po_spo import compare_po_spo\n",
-    "from scripts.setup import gen_test_data, gen_train_data, setup_po_model, setup_spo_model"
+    "from scripts.setup import gen_data, gen_train_data, setup_po_model, setup_spo_model"
    ]
   },
   {
@@ -68,18 +68,21 @@
     "B = 5\n",
     "network = (6, 8)\n",
     "random_seed = 31\n",
+    "train_seed = 31\n",
+    "test_seed = 42\n",
+    "intd_seed = 53\n",
     "\n",
     "# ML hyperparameters\n",
     "num_features = 5\n",
     "num_data_samples = 1000\n",
     "test_size = 0.2\n",
     "data_loader_batch_size = 32\n",
-    "po_epochs = 35\n",
+    "po_epochs = 20\n",
     "spo_epochs = 10\n",
     "po_lr = .01\n",
     "spo_lr = .003\n",
     "sim_data_samples = 100 # number of training data\n",
-    "deg = 7\n",
+    "deg = 3\n",
     "noise_width = 0.05\n",
     "\n",
     "# Interdictor parameters\n",
@@ -109,6 +112,9 @@
     "cfg.set(\"budget\", B)\n",
     "cfg.set(\"grid_size\", network)\n",
     "cfg.set(\"random_seed\", random_seed)\n",
+    "cfg.set(\"train_seed\", train_seed)\n",
+    "cfg.set(\"test_seed\", test_seed)\n",
+    "cfg.set(\"intd_seed\", intd_seed)\n",
     "\n",
     "cfg.set(\"num_features\", num_features)\n",
     "cfg.set(\"num_data_samples\", num_data_samples)\n",
@@ -151,7 +157,7 @@
     "opt_model = shortestPathGrb(graph)\n",
     "\n",
     "# Generate training data\n",
-    "training_data = gen_train_data(cfg, opt_model)"
+    "training_data = gen_train_data(cfg, opt_model, seed=train_seed)"
    ]
   },
   {
@@ -219,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = gen_test_data(cfg)\n",
+    "test_data = gen_data(cfg, seed=test_seed)\n",
     "true_objs, po_objs, spo_objs = compare_po_spo(cfg, opt_model, po_model, spo_model, test_data)"
    ]
   },
@@ -242,6 +248,7 @@
     "_ = ax.boxplot([po_val, spo_val], tick_labels=['PO', 'SPO'],\n",
     "           showmeans=True, meanline=True)   # optional styling\n",
     "ax.set_ylabel(\"Cost increase [%]\")\n",
+    "ax.grid(True)\n",
     "# plt.legend(['PO', 'SPO'], location='north')\n",
     "\n",
     "po_mean  = np.mean(po_val)\n",
@@ -263,8 +270,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15",
    "metadata": {},
    "source": [
     "## Compare Different Interdictors\n",
@@ -274,16 +291,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "interdictions = gen_test_data(cfg)"
+    "interdictions = gen_data(cfg, seed=intd_seed)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "source": [
     "### Naive Interdictor\n",
@@ -293,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "source": [
     "### Knowledgeable Interdictor"
@@ -399,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "source": [
     "## Comparison with Single Instances"
@@ -586,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
