--- a/src/Notebooks/Robust_SPO.ipynb
+++ b/src/Notebooks/Robust_SPO.ipynb
@@ -41,7 +41,7 @@
     "from src.solvers.BendersDecomposition import BendersDecomposition\n",
     "\n",
     "from scripts.compare_po_spo import compare_po_spo\n",
-    "from scripts.setup import gen_test_data, gen_train_data, setup_po_model, setup_spo_model"
+    "from scripts.setup import gen_data, gen_train_data, setup_po_model, setup_spo_model, setup_hybrid_spo_model"
    ]
   },
   {
@@ -60,27 +60,32 @@
     "B = 5\n",
     "network = (6, 8)\n",
     "random_seed = 31\n",
+    "intd_seed = 53\n",
     "\n",
     "# ML hyperparameters\n",
     "num_features = 5\n",
-    "num_data_samples = 200\n",
-    "test_size = 0.2\n",
+    "num_train_samples = 800\n",
+    "validation_size = 0.25\n",
+    "num_test_samples = 200\n",
     "data_loader_batch_size = 32\n",
     "po_epochs = 60\n",
-    "spo_epochs = 20\n",
-    "po_lr = .01\n",
-    "spo_lr = .003\n",
-    "sim_data_samples = 100 # number of training data\n",
-    "deg = 5\n",
+    "spo_epochs = 10\n",
+    "spo_po_epochs = 10\n",
+    "po_lr = 2e-2\n",
+    "spo_lr = 1e-3\n",
+    "spo_po_lr = po_lr\n",
+    "anchor = \"meanstd\"\n",
+    "lam = .2\n",
+    "deg = 7\n",
     "noise_width = 0.05\n",
     "\n",
     "# Interdictor parameters\n",
-    "benders_max_count = 20\n",
+    "benders_max_count = 35\n",
     "benders_eps = 1e-3\n",
     "lsd = 1e-5\n",
     "\n",
-    "# Set the normalization parameter as a function of the degree\n",
-    "normalization_constant = {3:10, 5:20, 7:70}[deg]\n",
+    "# # Set the normalization parameter as a function of the degree\n",
+    "# normalization_constant = {3:10, 5:20, 7:70}[deg]\n",
     "\n",
     "# Set the random seed for reproducibility\n",
     "np.random.seed(random_seed)\n",
@@ -101,19 +106,23 @@
     "cfg.set(\"budget\", B)\n",
     "cfg.set(\"grid_size\", network)\n",
     "cfg.set(\"random_seed\", random_seed)\n",
+    "cfg.set(\"intd_seed\", intd_seed)\n",
     "\n",
     "cfg.set(\"num_features\", num_features)\n",
-    "cfg.set(\"num_data_samples\", num_data_samples)\n",
-    "cfg.set(\"test_size\", test_size)\n",
+    "cfg.set(\"num_train_samples\", num_train_samples)\n",
+    "cfg.set(\"num_test_samples\", num_test_samples)\n",
+    "cfg.set(\"validation_size\", validation_size)\n",
     "cfg.set(\"data_loader_batch_size\", data_loader_batch_size)\n",
     "cfg.set(\"po_epochs\", po_epochs)\n",
     "cfg.set(\"spo_epochs\", spo_epochs)\n",
+    "cfg.set(\"spo_po_epochs\", spo_po_epochs)\n",
     "cfg.set(\"po_lr\", po_lr)\n",
     "cfg.set(\"spo_lr\", spo_lr)\n",
-    "cfg.set(\"sim_data_samples\", sim_data_samples)\n",
+    "cfg.set(\"spo_po_lr\", spo_po_lr)\n",
+    "cfg.set(\"lam\", lam)\n",
+    "cfg.set(\"anchor\", anchor)\n",
     "cfg.set(\"deg\", deg)\n",
     "cfg.set(\"noise_width\", noise_width)\n",
-    "cfg.set(\"normalization_constant\", normalization_constant)\n",
     "\n",
     "cfg.set(\"benders_max_count\", benders_max_count)\n",
     "cfg.set(\"benders_eps\", benders_eps)\n",
@@ -134,7 +143,7 @@
     "opt_model = shortestPathGrb(graph)\n",
     "\n",
     "# Generate training data\n",
-    "training_data = gen_train_data(cfg, opt_model)"
+    "training_data, testing_data, normalization_constant = gen_train_data(cfg, opt_model)"
    ]
   },
   {
@@ -160,14 +169,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg.set(\"spo_lr\", 0.001)\n",
-    "spo_model = setup_spo_model(\n",
+    "spo_po_model = setup_po_model(\n",
     "    cfg,\n",
     "    graph,\n",
     "    opt_model,\n",
     "    training_data,\n",
     "    versatile=True,\n",
-    "    transfer_model=po_model\n",
+    "    train_type=\"spo\"\n",
     ")"
    ]
   },
@@ -178,14 +186,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = gen_test_data(cfg)\n",
-    "true_objs, po_objs, spo_objs = compare_po_spo(cfg, opt_model, po_model, spo_model, test_data)"
+    "spo_model = setup_hybrid_spo_model(\n",
+    "    cfg,\n",
+    "    graph,\n",
+    "    opt_model,\n",
+    "    training_data,\n",
+    "    versatile=True,\n",
+    "    # transfer_model=spo_po_model\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: - Plot cost/est. cost eror\n",
+    "#       - Create example to see what costs look like here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_data = gen_data(cfg, seed=intd_seed)\n",
+    "true_objs, po_objs, spo_objs = compare_po_spo(cfg, opt_model, po_model, spo_model, testing_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,39 +260,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "interdictions = gen_test_data(cfg)"
+    "interdictions = gen_data(cfg, seed=intd_seed, normalization_constant=normalization_constant)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simulate_interdictor(cfg, test_data, interdictions, est_model = None, idx = None):\n",
+    "def simulate_interdictor(cfg, test_data, interdictions, normalization_constant, est_model = None, idx = None):\n",
     "    \"\"\"\n",
     "    Compare the performance of the PO and SPO models using symmetric shortest path interdiction.\n",
     "    This function simulates the interdiction process and evaluates the objective values.\n",
     "    \"\"\"\n",
     "\n",
     "    # Get the number of simulation data samples\n",
-    "    sim_data_samples = cfg.get(\"sim_data_samples\")\n",
-    "    normalization_constant = cfg.get(\"normalization_constant\")\n",
+    "    num_test_samples = cfg.get(\"num_test_samples\")\n",
     "\n",
     "    # Prepare lists to store results\n",
     "    true_objs = []\n",
     "    est_objs = []\n",
     "\n",
     "    # Print that the simulation is starting\n",
-    "    print(f\"Running simulation with {sim_data_samples} samples...\")\n",
+    "    print(f\"Running simulation with {num_test_samples} samples...\")\n",
     "\n",
     "    # Iterate through each data sample\n",
-    "    for i in range(sim_data_samples) if idx is None else [idx]:\n",
+    "    for i in range(num_test_samples) if idx is None else [idx]:\n",
     "        # Store values for the current sample\n",
     "        cost = test_data[\"costs\"][i] * normalization_constant\n",
     "        interdiction = interdictions[\"costs\"][i] * normalization_constant\n",
@@ -264,7 +299,7 @@
     "\n",
     "        # Compute estimated cost if an estimator is provided. Otherwise use the true costs\n",
     "        if est_model is not None:\n",
-    "            feature = test_data[\"features\"][i]\n",
+    "            feature = test_data[\"feats\"][i]\n",
     "            est_cost = est_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
     "        else:\n",
     "            est_cost = cost\n",
@@ -294,17 +329,17 @@
     "        est_objs.append(true_graph(y_est, interdictions=x_intd * interdiction))\n",
     "\n",
     "        # Print progress\n",
-    "        step = max(1, sim_data_samples // 20)  # ~every 5% (safe for small N)\n",
-    "        if (i % step == 0) or (i == sim_data_samples - 1):\n",
-    "            if i == sim_data_samples - 1:\n",
+    "        step = max(1, num_test_samples // 20)  # ~every 5% (safe for small N)\n",
+    "        if (i % step == 0) or (i == num_test_samples - 1):\n",
+    "            if i == num_test_samples - 1:\n",
     "                done, pct = 20, 100                      # final tick\n",
     "            else:\n",
-    "                done = (i * 20) // sim_data_samples      # 0..20 “=”\n",
+    "                done = (i * 20) // num_test_samples      # 0..20 “=”\n",
     "                pct  = done * 5                          # 0,5,10,...,95\n",
     "\n",
     "            sys.stdout.write('\\r[%-20s] %3d%%' % ('=' * done, pct))\n",
     "            sys.stdout.flush()\n",
-    "            if i == sim_data_samples - 1:\n",
+    "            if i == num_test_samples - 1:\n",
     "                sys.stdout.write('\\n')\n",
     "\n",
     "\n",
@@ -317,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "13",
    "metadata": {},
    "source": [
     "# Debugging Bender's Decomposition!"
@@ -326,32 +361,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost = test_data[\"costs\"][60] * normalization_constant\n",
-    "interdiction = interdictions[\"costs\"][60] * normalization_constant\n",
+    "idx = 79\n",
+    "cost = testing_data[\"costs\"][idx] * normalization_constant\n",
+    "interdiction = interdictions[\"costs\"][idx] * normalization_constant\n",
     "m, n = cfg.get(\"grid_size\")\n",
     "est_cost = cost\n",
     "\n",
     "# Update opt_model\n",
     "est_graph = ShortestPathGrid(m, n, cost=est_cost)\n",
     "est_opt_model = shortestPathGrb(est_graph)\n",
-    "est_opt_model.visualize()\n",
-    "\n",
-    "print(cost)"
+    "est_opt_model.visualize()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solutions without information asymmetry\n",
-    "# cfg.set(\"benders_max_count\", 24)\n",
+    "cfg.set(\"benders_max_count\", 30)\n",
     "interdictor_I = BendersDecomposition(est_opt_model, \n",
     "                                        k=cfg.get(\"budget\"), \n",
     "                                        interdiction_cost=interdiction, \n",
@@ -363,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,33 +407,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cfg.set(\"benders_max_count\", 20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "17",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "true_interdiction = simulate_interdictor(cfg, test_data, interdictions)"
+    "# End of Debugging Bender's Decomposition"
    ]
   },
   {
@@ -409,7 +421,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "po_interdiction = simulate_interdictor(cfg, test_data, interdictions, est_model=po_model)"
+    "idx = 0"
    ]
   },
   {
@@ -419,13 +431,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spo_interdiction = simulate_interdictor(cfg, test_data, interdictions, est_model=spo_model)"
+    "true_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "po_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant, est_model=po_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spo_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant, est_model=spo_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "28",
    "metadata": {},
    "source": [
     "Takeaway from above: If we post-process the trained cost predictor with SPO, we can achieve a better model and better interdiction (robust) performance!"
@@ -523,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "29",
    "metadata": {},
    "source": [
     "## Single Examples"
@@ -532,23 +564,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 60"
+    "idx = 5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Store values for the current sample\n",
-    "feature = test_data[\"features\"][idx]\n",
-    "cost = test_data[\"costs\"][idx] * normalization_constant\n",
+    "feature = testing_data[\"feats\"][idx]\n",
+    "cost = testing_data[\"costs\"][idx] * normalization_constant\n",
     "interdiction = interdictions[\"costs\"][idx] * normalization_constant\n",
     "m, n = cfg.get(\"grid_size\")\n",
     "\n",
@@ -581,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": []
