--- a/src/Notebooks/Robust_SPO.ipynb
+++ b/src/Notebooks/Robust_SPO.ipynb
@@ -39,6 +39,7 @@
     "from src.models.ShortestPathGrb import shortestPathGrb\n",
     "from src.models.ShortestPathGrid import ShortestPathGrid\n",
     "from src.solvers.BendersDecomposition import BendersDecomposition\n",
+    "from models.CalibrationTrainer import CalibratorTrainer\n",
     "\n",
     "from scripts.compare_po_spo import compare_po_spo\n",
     "from scripts.setup import gen_data, gen_train_data, setup_po_model, setup_spo_model, setup_hybrid_spo_model"
@@ -64,23 +65,23 @@
     "\n",
     "# ML hyperparameters\n",
     "num_features = 5\n",
-    "num_train_samples = 800\n",
+    "num_train_samples = 1000\n",
     "validation_size = 0.25\n",
     "num_test_samples = 200\n",
     "data_loader_batch_size = 32\n",
-    "po_epochs = 60\n",
+    "po_epochs = 100\n",
     "spo_epochs = 20\n",
-    "spo_po_epochs = 0\n",
+    "spo_po_epochs = 30\n",
     "po_lr = 2e-2\n",
     "spo_lr = 1e-3\n",
     "spo_po_lr = po_lr\n",
-    "anchor = \"meanstd\"\n",
+    "anchor = \"mse\"\n",
     "lam = .05\n",
     "deg = 7\n",
     "noise_width = 0.05\n",
     "\n",
     "# Interdictor parameters\n",
-    "benders_max_count = 35\n",
+    "benders_max_count = 50\n",
     "benders_eps = 1e-3\n",
     "lsd = 1e-5\n",
     "\n",
@@ -192,7 +193,7 @@
     "    opt_model,\n",
     "    training_data,\n",
     "    versatile=True,\n",
-    "    # transfer_model=spo_po_model\n",
+    "    transfer_model=spo_po_model\n",
     ")"
    ]
   },
@@ -204,7 +205,13 @@
    "outputs": [],
    "source": [
     "# TODO: - Plot cost/est. cost eror\n",
-    "#       - Create example to see what costs look like here"
+    "#       - Create example to see what costs look like here\n",
+    "import pyepo\n",
+    "print(f\"log_s parameter before Calibrator fitting: {spo_model.log_s.item()}\") \n",
+    "calibration_trainer = CalibratorTrainer(spo_model)\n",
+    "calibration_trainer.align_scale_ols(training_data['train_loader'])\n",
+    "print(f\"log_s parameter after Calibrator fitting:  {spo_model.log_s.item()}\")\n",
+    "print(f\"New SPO predictor regret:                  {pyepo.metric.regret(spo_model, opt_model, training_data['val_loader'])}\")"
    ]
   },
   {
@@ -227,7 +234,7 @@
     "path, obj = opt_model_temp.solve()\n",
     "\n",
     "# Predict the shortest path with predict-then-optimize framework\n",
-    "predicted_costs = spo_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy()\n",
+    "predicted_costs = spo_model(torch.tensor(feature, dtype=torch.float32)).detach().numpy() * normalization_constant\n",
     "spo_graph = ShortestPathGrid(m, n, cost=predicted_costs)\n",
     "spo_shortest_path = shortestPathGrb(spo_graph)\n",
     "spo_path, _ = spo_shortest_path.solve()\n",
@@ -269,6 +276,8 @@
     "_ = ax.boxplot([po_val, spo_val], tick_labels=['PO', 'SPO'],\n",
     "           showmeans=True, meanline=True)   # optional styling\n",
     "ax.set_ylabel(\"Cost increase [%]\")\n",
+    "ax.set_ylim(0,50)\n",
+    "ax.grid()\n",
     "# plt.legend(['PO', 'SPO'], location='north')\n",
     "\n",
     "po_mean  = np.mean(po_val)\n",
@@ -303,6 +312,31 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Comparison of different means of costs to show similar \n",
+    "print(f\"Mean value comparison:\")\n",
+    "print(f\"----------------------\")\n",
+    "print(f\"Test:  {testing_data['costs'].mean():.7f}\")\n",
+    "print(f\"Train: {training_data['train_loader'].dataset.costs.mean():.7f}\")\n",
+    "print(f\"Intd:  {interdictions['costs'].mean():.7f}\")\n",
+    "print(f\"PO:    {po_model(torch.tensor(testing_data['feats'], dtype=torch.float32)).mean().item():.7f}\")\n",
+    "print(f\"SPO+:  {spo_model(torch.tensor(testing_data['feats'], dtype=torch.float32)).mean().item():.7f}\")\n",
+    "\n",
+    "print(f\"\\nStd value comparison:\")\n",
+    "print(f\"----------------------\")\n",
+    "print(f\"Test:  {testing_data['costs'].std():.7f}\")\n",
+    "print(f\"Train: {training_data['train_loader'].dataset.costs.std():.7f}\")\n",
+    "print(f\"Intd:  {interdictions['costs'].std():.7f}\")\n",
+    "print(f\"PO:    {po_model(torch.tensor(testing_data['feats'], dtype=torch.float32)).std().item():.7f}\")\n",
+    "print(f\"SPO+:  {spo_model(torch.tensor(testing_data['feats'], dtype=torch.float32)).std().item():.7f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "source": [
     "# Debugging Bender's Decomposition!"
@@ -393,15 +427,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 79\n",
+    "idx = 0\n",
     "cost = testing_data[\"costs\"][idx] * normalization_constant\n",
     "interdiction = interdictions[\"costs\"][idx] * normalization_constant\n",
     "m, n = cfg.get(\"grid_size\")\n",
-    "est_cost = cost\n",
+    "est_cost = spo_model(torch.tensor(testing_data[\"feats\"][idx], dtype=torch.float32)).detach().numpy() * normalization_constant\n",
+    "\n",
+    "# from models.CalibratedPredictor import scale_alignment_alpha\n",
+    "# scale_alignment_alpha(est_cost, cost)\n",
     "\n",
     "# Update opt_model\n",
     "est_graph = ShortestPathGrid(m, n, cost=est_cost)\n",
@@ -412,12 +449,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solutions without information asymmetry\n",
-    "cfg.set(\"benders_max_count\", 30)\n",
     "interdictor_I = BendersDecomposition(est_opt_model, \n",
     "                                        k=cfg.get(\"budget\"), \n",
     "                                        interdiction_cost=interdiction, \n",
@@ -429,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,20 +476,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "source": [
     "# End of Debugging Bender's Decomposition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = 0"
    ]
   },
   {
@@ -463,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant)"
+    "idx = 0"
    ]
   },
   {
@@ -473,7 +499,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "po_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant, est_model=po_model)"
+    "true_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant)"
    ]
   },
   {
@@ -483,13 +509,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spo_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant, est_model=spo_model)"
+    "po_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant, est_model=po_model)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spo_interdiction = simulate_interdictor(cfg, testing_data, interdictions, normalization_constant, est_model=spo_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,12 +610,24 @@
     "_ = ax.boxplot([po_vals, spo_vals], tick_labels=['PO', 'SPO'],\n",
     "           showmeans=True, meanline=True)   # optional styling\n",
     "ax.set_ylabel(\"Cost increase [%]\")\n",
-    "ax.grid(True)"
+    "ax.grid(True)\n",
+    "\n",
+    "# std devs\n",
+    "po_std_samp = np.std(po_vals, ddof=1)\n",
+    "spo_std_samp = np.std(spo_vals, ddof=1)\n",
+    "mean_improvement = (po_mean - spo_mean) * 100 / po_mean\n",
+    "std_improvement = (po_std_samp - spo_std_samp) * 100 / po_std_samp\n",
+    "\n",
+    "rows = [\n",
+    "    [\"Mean\",         f\"{po_mean:.2f}%\",  f\"{spo_mean:.2f}%\", f\"{mean_improvement:.2f}%\"],\n",
+    "    [\"Std (sample)\", f\"{po_std_samp:.2f}%\", f\"{spo_std_samp:.2f}%\", f\"{std_improvement:.2f}%\"],\n",
+    "]\n",
+    "print(tabulate(rows, headers=[\"Metric\", \"PO (%)\", \"SPO (%)\", \"SPO improvement (%)\"], tablefmt=\"github\"))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "source": [
     "Takeaway from above: If we post-process the trained cost predictor with SPO, we can achieve a better model and better interdiction (robust) performance!"
@@ -587,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "source": [
     "## Single Examples"
@@ -596,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": []
